<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintDimensionRatio="1.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_siting" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/welcome_to_college"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_22px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/tag_chuno"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_21sdp"
            android:src="@drawable/ic_bird_anim"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_5sdp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/button"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/mobile_number"
            android:orientation="horizontal"
            android:textColorHint="@color/text_blue"
            android:textSize="@dimen/text_16px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_16px"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:background="@drawable/ic_btn_outline"
            android:backgroundTint="@color/text_blue"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/continue_"
                android:textColor="@color/white_text"
                android:textSize="@dimen/text_16px" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:background="@drawable/ic_dotted_line"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_dotted_line"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

        <LinearLayout
            android:id="@+id/btnMail"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="0dp"
            android:elevation="@dimen/_2sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/ic_btn_outline"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textStyle="normal"
                android:padding="@dimen/_3sdp"
                android:text="@string/login_via_google"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14px" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/text_10px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMail" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>